# proto_test

./: .gitignore  CMakeLists.txt
proto/: CMakeLists.txt  foo.proto
scripts/: receive.py
src/: send.cc
