PROJECT(prototest)
CMAKE_MINIMUM_REQUIRED (VERSION 3.2)
SET(CMAKE_CXX_FLAGS "-g -Wall -Werror -std=c++11")

ADD_SUBDIRECTORY(proto)
#ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(scripts)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_EXECUTABLE(send src/send.cc)
TARGET_LINK_LIBRARIES(send proto ${PROTOBUF_LIBRARY})
